--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 env_logger = "0.8.3"
-# actix-web = "3"
 reqwest = { version = "0.11", features = ["blocking", "json", "socks"] }
 clap = "3.0.0-beta.2"
 serde = { version = "1.0", features = ["derive"] }
@@ -19,3 +18,4 @@ toml = "0.5.8"
 xdg = "^2.1"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 sha2 = "0.9"
+crossbeam = "0.8"
