--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ xdg = "^2.1"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 sha2 = "0.9"
 crossbeam = "0.8"
+chrono = { version = "0.4", features = ["alloc", "std", "clock", "serde"] }
