--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,10 @@ uuid = { version = "0.8", features = ["serde", "v4"] }
 sha2 = "0.9"
 crossbeam = "0.8"
 chrono = { version = "0.4", features = ["alloc", "std", "clock", "serde"] }
+mdict = { path = "lib/mdict" }
+
+[workspace]
+members = [
+  "./",
+  "lib/mdict"
+]
