--- a/lib/mdict/Cargo.toml
+++ b/lib/mdict/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 log = "0.4"
 env_logger = "0.8.3"
 # test-env-log = "0.2.5"
-evmap = "11.0.0-alpha"
+dashmap = "4.0.2"
 salsa20 = "0.7.2"
 ripemd128 = "0.1.2"
 adler32 = "1.2.0"
