--- a/lib/mdict/Cargo.toml
+++ b/lib/mdict/Cargo.toml
@@ -8,8 +8,7 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
-env_logger = "0.8.3"
-# test-env-log = "0.2.5"
+env_logger = "0.8"
 dashmap = "4.0.2"
 salsa20 = "0.7.2"
 ripemd128 = "0.1.2"
@@ -18,3 +17,4 @@ byteorder = "1"
 scraper = "0.12.0"
 regex = "1"
 flate2 = "1.0.20"
+patricia_tree = "0.3"
