--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ whatlang = "0.6.0"
 mdict = { path = "lib/mdict" }
 once_cell = "1.8"
 tokio = { version = "1", features = ["full"] }
+warp = "0.3"
 
 [workspace]
 members = [
