--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ log = "0.4"
 env_logger = "0.8"
 reqwest = { version = "^0.11", features = ["json", "socks"] }
 clap = "3.0.0-beta.2"
+clap_generate = "3.0.0-beta.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ansi_term = "0.12"
@@ -25,6 +26,10 @@ once_cell = "1.8"
 tokio = { version = "1", features = ["full"] }
 futures = "*"
 warp = "0.3"
+
+[build-dependencies]
+clap = "3.0.0-beta.2"
+clap_generate = "3.0.0-beta.2"
 
 [workspace]
 members = [
