--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 env_logger = "0.8"
-reqwest = { version = "^0.11", features = ["json", "socks"] }
+reqwest = { version = "0.11", features = ["json", "socks"] }
 clap = "3.0.0-beta.4"
 clap_generate = "3.0.0-beta.4"
 serde = { version = "1.0", features = ["derive"] }
@@ -26,6 +26,7 @@ once_cell = "1.8"
 tokio = { version = "1", features = ["full"] }
 futures = "*"
 warp = "0.3"
+scraper = "0.12"
 
 [build-dependencies]
 clap = "3.0.0-beta.4"
