--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ edition = "2018"
 log = "0.4"
 env_logger = "0.8"
 reqwest = { version = "0.11", features = ["json", "socks"] }
-clap = "3.0.0-beta.4"
-clap_generate = "3.0.0-beta.4"
+clap = "3.0"
+clap_complete = "3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ansi_term = "0.12"
@@ -29,8 +29,8 @@ warp = "0.3"
 scraper = "0.12"
 
 [build-dependencies]
-clap = "3.0.0-beta.4"
-clap_generate = "3.0.0-beta.4"
+clap = "3.0"
+clap_complete = "3.0"
 
 [workspace]
 members = [
