--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
+anyhow = "1.0"
 env_logger = "0.8"
 reqwest = { version = "0.11", features = ["json", "socks"] }
+tokio-tungstenite = "0.16"
 clap = "3.0"
 clap_complete = "3.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -24,6 +26,7 @@ whatlang = "0.6.0"
 mdict = { path = "lib/mdict" }
 once_cell = "1.8"
 tokio = { version = "1", features = ["full"] }
+tokio-stream = "*"
 futures = "*"
 warp = "0.3"
 scraper = "0.12"
