--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 anyhow = "1.0"
+async-trait = "*"
 env_logger = "0.8"
 reqwest = { version = "0.11", features = ["json", "socks"] }
 tokio-tungstenite = "0.16"
